--- a/views/admin/detail.hbs
+++ b/views/admin/detail.hbs
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-12">
+    <img class="img-responsive center-block" src="{{restaurant.image}}" style="width: 250px;margin-bottom: 25px;">
     <h1>{{restaurant.name}}</h1>
   </div>
 
