--- a/views/admin/restaurants.hbs
+++ b/views/admin/restaurants.hbs
@@ -3,9 +3,12 @@
 <a href='/admin/restaurants/create'>
   <button type="button" class="btn btn-primary">New Restaurant</button>
 </a>
+<br />
+<br />
 
-<br />
-<br />
+<div>
+  <a href="/admin/restaurants">Restaurants</a> | <a href="/admin/users">Users</a>
+</div>
 
 <table class="table">
   <thead class="thead-dark">
