--- a/views/admin/detail.hbs
+++ b/views/admin/detail.hbs
@@ -2,6 +2,7 @@
   <div class="col-md-12">
     <img class="img-responsive center-block" src="{{restaurant.image}}" style="width: 250px;margin-bottom: 25px;">
     <h1>{{restaurant.name}}</h1>
+    <p>[{{restaurant.Category.name}}]</p>
   </div>
 
   <div class="col-md-4">
