feat: add viewCounts to restuarant model & show viewCounts on dashboard

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -8,7 +8,8 @@
 <h5>
   <ul>
     <li>評論數 : {{comments}}</li>
-    <li>瀏覽數 : </li>
+    <li>瀏覽數 : {{viewCounts}}</li>
     <li>收藏數 : </li>
   </ul>
 </h5>
+<a href="javascript:history.back()">回上一頁</a>
