--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -9,7 +9,7 @@
   <ul>
     <li>評論數 : {{comments}}</li>
     <li>瀏覽數 : {{viewCounts}}</li>
-    <li>收藏數 : </li>
+    <li>收藏數 : {{FavoritedUserCounts}}</li>
   </ul>
 </h5>
 <a href="javascript:history.back()">回上一頁</a>
